# robot-hotel

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  test-plan.md
confluence_sync/: build_html_md.py  confluence_sync.py  download_attachments.py  pull_space.py  push_diagram.py  push_page.py  sync_config.json  sync_one_page.py
docs/: CLAUDE.md  erd.md  folder-structure.md  implementation-plan.md  implemented.md  system-architecture.md  system-requirements.md  tech-stack.md  user-requirements.md
docs/erd.assets/: pingdergarten.drawio  pingdergarten.macro.xml
docs/robots/: omx-ai.md  openarm.md  vic-pinky.md
docs/system-architecture.assets/: Untitled Diagram-1777461129023.drawio  Untitled Diagram-1777461129023.macro.xml  Untitled Diagram-1777624819005.drawio  Untitled Diagram-1777624819005.macro.xml  hardware-architecture.macro.xml  software-architecture.macro.xml
scripts/: CLAUDE.md  README.md  pull_docs.sh  push_docs.sh  run_server.sh  sync_confluence_page.sh  sync_docs.sh  test.sh  ui-robot.sh
scripts/_sync_docs/: CLAUDE.md  drawio_utils.py  html_md_converter.py  md_to_confluence.py  pages.sh  push_page.py  sync_one_page.py
scripts/confluence_sync/: .env.example  README.md  build_html_md.py  confluence_info.md  confluence_sync.py  download_attachments.py  drawio_utils.py  pull_space.py  push_diagram.py  push_page.py  sync_config.json  sync_one_page.py
server/ai/: config.py  hub.py  llm.py  robots.py
server/control/: config.py  main.py
ui/robot-ui/: .gitignore  env.d.ts  index.html  package-lock.json  package.json  (+3 more)
(+25 files in other folders)
