[project]
name = "pingdergarten"
version = "0.1.0"
description = "Pingdergarten — educational robot service"
requires-python = ">=3.11"
dependencies = [
  # 스크립트 공통
  "requests",
  "python-dotenv",
  "mistune>=3.0",
  # AI Hub / Control Service
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
  "pytest>=9",
  "anyio[trio]>=4",
  "pytest-anyio>=0.0.0",
]

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
